<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Razeware LLC
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ Notwithstanding the foregoing, you may not use, copy, modify, merge, publish,
  ~ distribute, sublicense, create a derivative work, and/or sell copies of the
  ~ Software in any work that is designed, intended, or marketed for pedagogical or
  ~ instructional purposes related to programming, coding, application development,
  ~ or information technology.  Permission for such use, copying, modification,
  ~ merger, publication, distribution, sublicensing, creation of derivative works,
  ~ or sale is expressly withheld.
  ~
  ~ This project and source code may use libraries or frameworks that are
  ~ released under various Open-Source licenses. Use of those libraries and
  ~ frameworks are governed by their own individual licenses.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<resources>
  <string name="app_name">PromoApp</string>
  <string name="text_claim_offer">Claim Offer</string>
  <string name="text_your_promo_code">Use this Code to get a 50% Discount</string>
  <string name="text_promo_code">ABCDE</string>
  <string name="text_deep_link_title">Claim Offer</string>
  <string name="text_offer_claimed">Congratulations! You have claimed the offer! Buy the Basketball at $25</string>
  <string name="text_product_label">Basketball Indoors/Outdoors</string>
  <string name="text_product_brand">Brand: Molten</string>
  <string name="text_product_price">$50</string>
  <string name="text_product_image_desc">Product Image</string>

</resources>